--- a/views/events/screeningEventSeries/form.ejs
+++ b/views/events/screeningEventSeries/form.ejs
@@ -6,7 +6,11 @@
         <select class="form-control" name="locationBranchCode">
             <option value="">選択してください</option>
             <% for (const movieTheater of movieTheaters) { %>
-            <option value="<%= movieTheater.branchCode %>"<% if (forms.locationBranchCode === movieTheater.branchCode) { %> selected<% } %>><%= movieTheater.name.ja %></option>
+            <option value="<%= movieTheater.branchCode %>" <% if (forms.locationBranchCode===movieTheater.branchCode) {
+                %> selected
+                <% } %>>
+                <%= movieTheater.name.ja %>
+            </option>
             <% } %>
         </select>
     </div>
@@ -19,7 +23,10 @@
         <select class="form-control" name="movieIdentifier">
             <option value="">選択してください</option>
             <% for (const movie of movies) { %>
-            <option value="<%= movie.identifier %>"<% if (forms.movieIdentifier === movie.identifier) { %> selected<% } %>><%= movie.name %></option>
+            <option value="<%= movie.identifier %>" <% if (forms.movieIdentifier===movie.identifier) { %> selected
+                <% } %>>
+                <%= movie.name %>
+            </option>
             <% } %>
         </select>
     </div>
@@ -31,12 +38,12 @@
     <div class="col-sm-9">
         <input class="form-control" name="nameJa" id="nameJa" placeholder="" maxlength=64 value="<%= forms.nameJa %>">
         <p class="message">
-        全角64文字以内でご入力ください。
+            全角64文字以内でご入力ください。
         </p>
         <p class="error message text-danger">
-        <% if (errors && errors.nameJa) { %>
-        <%- errors.nameJa.msg %>
-        <% } %>
+            <% if (errors && errors.nameJa) { %>
+            <%- errors.nameJa.msg %>
+            <% } %>
         </p>
     </div>
 </div>
@@ -47,12 +54,12 @@
     <div class="col-sm-9">
         <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength=64 value="<%= forms.kanaName %>">
         <p class="message">
-        全角64文字以内でご入力ください。
+            全角64文字以内でご入力ください。
         </p>
         <p class="error message text-danger">
-        <% if (errors && errors.kanaName) { %>
-        <%- errors.kanaName.msg %>
-        <% } %>
+            <% if (errors && errors.kanaName) { %>
+            <%- errors.kanaName.msg %>
+            <% } %>
         </p>
     </div>
 </div>
@@ -63,12 +70,12 @@
     <div class="col-sm-9">
         <input class="form-control" name="nameEn" id="nameEn" placeholder="" maxlength=128 value="<%- forms.nameEn %>">
         <p class="message">
-        半角128文字以内でご入力ください。
+            半角128文字以内でご入力ください。
         </p>
         <p class="error message text-danger">
-        <% if (errors && errors.nameEn) { %>
-        <%- errors.nameEn.msg %>
-        <% } %>
+            <% if (errors && errors.nameEn) { %>
+            <%- errors.nameEn.msg %>
+            <% } %>
         </p>
     </div>
 </div>
@@ -77,25 +84,27 @@
         上映開始日
     </label>
     <div class="col-sm-9">
-        <input class="form-control datepicker" style="width:30%;display:inline-block;" name="startDate" id="startDate" placeholder="" maxlength=10 value="<%= forms.startDate %>">
+        <input class="form-control datepicker" style="width:30%;display:inline-block;" name="startDate" id="startDate"
+            placeholder="" maxlength=10 value="<%= forms.startDate %>">
         <p class="error message text-danger">
-        <% if (errors && errors.startDate) { %>
-        <%- errors.startDate.msg %>
-        <% } %>
-        </p>  
+            <% if (errors && errors.startDate) { %>
+            <%- errors.startDate.msg %>
+            <% } %>
+        </p>
     </div>
 </div>
 <div class="form-group">
     <label for="endDate" class="col-sm-3 control-label label-title">
         上映終了日
-    </label>    
+    </label>
     <div class="col-sm-9">
-        <input class="form-control datepicker" style="width:30%;display:inline-block;" name="endDate" id="endDate" placeholder="" maxlength=10 value="<%= forms.endDate %>">
+        <input class="form-control datepicker" style="width:30%;display:inline-block;" name="endDate" id="endDate"
+            placeholder="" maxlength=10 value="<%= forms.endDate %>">
         <p class="error message text-danger">
-        <% if (errors && errors.endDate) { %>
-        <%- errors.endDate.msg %>
-        <% } %>
-        </p>  
+            <% if (errors && errors.endDate) { %>
+            <%- errors.endDate.msg %>
+            <% } %>
+        </p>
     </div>
 </div>
 <div class="form-group">
@@ -114,13 +123,16 @@
         <select name="contentRating" id="contentRating" class="form-control">
             <option value="">---</option>
             <% for (let rating of ratings) { %>
-            <option value="<%= rating.code %>"<% if (forms.contentRating === rating.code) { %> selected="selected"<% } %>><%- rating.name.ja %></option>
+            <option value="<%= rating.code %>" <% if (forms.contentRating===rating.code) { %> selected="selected"
+                <% } %>>
+                <%- rating.name.ja %>
+            </option>
             <% } %>
         </select>
         <p class="error message text-danger">
-        <% if (errors && errors.contentRating) { %>
-        <%- errors.contentRating.msg %>
-        <% } %>
+            <% if (errors && errors.contentRating) { %>
+            <%- errors.contentRating.msg %>
+            <% } %>
         </p>
     </div>
 </div>
@@ -133,9 +145,9 @@
         <p class="message">
         </p>
         <p class="error message text-danger">
-        <% if (errors && errors.subtitleLanguage) { %>
-        <%- errors.subtitleLanguage.msg %>
-        <% } %>
+            <% if (errors && errors.subtitleLanguage) { %>
+            <%- errors.subtitleLanguage.msg %>
+            <% } %>
         </p>
     </div>
 </div>
@@ -144,25 +156,17 @@
         上映形態<font color="red">＊</font>
     </label>
     <div class="col-sm-9">
-        <%
-            let screens = [
-                {code: 'normal', name: {ja: '通常上映', en:'normal'}},
-                {code: 'ATMOS', name: {ja: 'ATMOS', en:'ATMOS'}},
-                {code: 'IMAX', name: {ja: 'IMAX', en:'IMAX'}},
-                {code: 'MX4D', name: {ja: 'MX4D', en:'MX4D'}},
-                {code: 'TCX', name: {ja: 'TCX', en:'TCX'}}
-            ];
-        %>
-        <select name="videoFormat" id="videoFormat" class="form-control">
-            <option value="">---</option>
-            <% for (let screen of screens) { %>
-            <option value="<%= screen.code %>"<% if (forms.videoFormat === screen.code) { %> selected="selected"<% } %>><%- screen.name.ja %></option>
-            <% } %>
-        </select>
+        <% Object.keys(VideoFormatType).forEach((key) => { %>
+        <input type="checkbox" name="videoFormatType[]" value="<%= VideoFormatType[key] %>" <% if
+            (forms.videoFormatType.indexOf(VideoFormatType[key])>= 0) { %>checked="checked"
+        <% } %>>
+        <%= VideoFormatType[key] %>
+        <% }) %>
+
         <p class="error message text-danger">
-        <% if (errors && errors.videoFormat) { %>
-        <%- errors.videoFormat.msg %>
-        <% } %>
+            <% if (errors && errors.videoFormat) { %>
+            <%- errors.videoFormat.msg %>
+            <% } %>
         </p>
     </div>
 </div>
