--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -32,6 +32,9 @@
             <li class="<%= (displayId === 'Aa-8') ? 'active': ''; %>"><a href="/ticketTypeGroups">
                     <i class="glyphicon glyphicon-list"></i> 券種グループ検索</a>
             </li>
+            <li class="<%= (displayId === 'Aa-13') ? 'active': ''; %>"><a href="/priceSpecifications">
+                    <i class="glyphicon glyphicon-list"></i> 価格仕様</a>
+            </li>
         </ul>
     </div>
     <div class="panel panel-default">
