# CHEVRE-61 ### Changed - チケットオファーに在庫状況を追加。

--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -65,6 +65,7 @@ Aa-6
           <!--<th>サイト表示用券種名</th>-->
           <th>管理用券種名</th>
           <th>金額(円)</th>
+          <th>在庫</th>
           <th></th>
         </tr>
       </thead>
@@ -78,6 +79,7 @@ Aa-6
           <td name="managementTypeName">$managementTypeName$</td>
           <% /* 金額(円) */ %>
           <td name="ticketPrice" style="text-align:right;">$ticketPrice$</td>
+          <td name="availability">$availability$</td>
           <% /* 編集ボタン */ %>
           <td name="edit" class="center">
             <div class="btn-area">
