--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -93,3 +93,25 @@
         <input type="hidden" name="hiddenColor" id="hiddenColor">
     </div>
 </div>
+<div class="form-group ">
+    <label for="indicatorColor" class="col-sm-3 control-label label-title">
+        在庫状況
+    </label>
+    <div class="col-sm-9">
+        <select class="form-control" name="availability">
+            <option value="<%= ItemAvailability.InStock %>" <% if (forms.availability===ItemAvailability.InStock) { %>
+                selected
+                <% } %>>指定なし</option>
+            <option value="<%= ItemAvailability.InStoreOnly %>" <% if (forms.availability===ItemAvailability.InStoreOnly)
+                { %> selected
+                <% } %>>
+                店頭販売のみ
+            </option>
+            <option value="<%= ItemAvailability.OnlineOnly %>" <% if (forms.availability===ItemAvailability.OnlineOnly)
+                { %> selected
+                <% } %>>
+                オンライン販売のみ
+            </option>
+        </select>
+    </div>
+</div>
