--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -3,7 +3,7 @@
 <%- contentFor('displayId') %>
 Aa-4
 <%- contentFor('styles') %>
-<link href="/css/scheduler.css" rel="stylesheet">
+<!-- <link href="/css/scheduler.css" rel="stylesheet"> -->
 <%- contentFor('scripts') %>
 <script src="/js/master/events/screeningEvent.js"></script>
 <%- contentFor('body') %>
