--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -12,6 +12,8 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/v4.0.0/build/css/bootstrap-datetimepicker.css">
+
     <!-- <link href="/css/bootstrap.css" rel="stylesheet"> -->
     <link href="/css/bootstrap-datepicker.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -24,6 +26,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
     <script src="/js/bootstrap.js"></script>
+    <!-- <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
+    <!-- <script src="moment-ja.js"></script> -->
+    <script src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/v4.0.0/src/js/bootstrap-datetimepicker.js"></script>
+
     <!-- datepicker本体 -->
     <script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
     <!-- datepicker日本語対応用ファイル -->
