--- a/views/creativeWorks/movie/add.ejs
+++ b/views/creativeWorks/movie/add.ejs
@@ -5,17 +5,18 @@ Aa-9
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-
-
+<script src="/js/master/creativeWork/movieForm.js"></script>
 
 <%- contentFor('body') %>
 <div class="col-sm-12 form-container">
     <% /* フォーム */ %>
-    <form method="post" class="form-horizontal" >
+    <form method="post" class="form-horizontal">
         <div class="menu-group">
             <% /* メッセージ */ %>
             <% if (message !== '') { %>
-            <p class="error message text-danger panel-body bg-danger"><%= message %></p>
+            <p class="error message text-danger panel-body bg-danger">
+                <%= message %>
+            </p>
             <% } %>
         </div>
         <% /* 作品コード */ %>
@@ -24,15 +25,16 @@ Aa-9
                 作品コード<font color="red">＊</font>
             </label>
             <div class="col-sm-9">
-                <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64 value="<%= forms.identifier %>">
+                <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
+                    value="<%= forms.identifier %>">
                 <p class="message">
-                <% /*半角64文字以内でご入力ください。*/ %>
-                半角64文字以内でご入力ください。
+                    <% /*半角64文字以内でご入力ください。*/ %>
+                    半角64文字以内でご入力ください。
                 </p>
                 <p class="error message text-danger">
-                <% if (errors && errors.identifier) { %>
-                <%- errors.identifier.msg %>
-                <% } %>
+                    <% if (errors && errors.identifier) { %>
+                    <%- errors.identifier.msg %>
+                    <% } %>
                 </p>
             </div>
         </div>
@@ -48,14 +50,3 @@ Aa-9
         </div>
     </form>
 </div>
-<script>
-$(function(){
-    $('.btn-ok').on('click', function(){
-        $('form').submit();
-    });
-    // datepickerセット
-    $('.datepicker').datepicker({
-        language: 'ja'
-    })
-});
-</script>
