--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -5,12 +5,12 @@
     <div class="col-sm-9">
         <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
         <p class="message">
-        全角64文字以内でご入力ください。
+            全角64文字以内でご入力ください。
         </p>
         <p class="error message text-danger">
-        <% if (errors && errors.name) { %>
-        <%- errors.name.msg %>
-        <% } %>
+            <% if (errors && errors.name) { %>
+            <%- errors.name.msg %>
+            <% } %>
         </p>
     </div>
 </div>
@@ -19,15 +19,16 @@
         上映時間<font color="red">＊</font>
     </label>
     <div class="col-sm-9">
-        <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration" placeholder="" maxlength=10 value="<%= forms.duration %>">
+        <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration" placeholder=""
+            maxlength=10 value="<%= forms.duration %>">
         分
         <p class="message">
-        半角10文字以内でご入力ください。
+            半角10文字以内でご入力ください。
         </p>
         <p class="error message text-danger">
-        <% if (errors && errors.duration) { %>
-        <%- errors.duration.msg %>
-        <% } %>
+            <% if (errors && errors.duration) { %>
+            <%- errors.duration.msg %>
+            <% } %>
         </p>
     </div>
 </div>
@@ -47,13 +48,33 @@
         <select name="contentRating" id="contentRating" class="form-control">
             <option value="">---</option>
             <% for (let rating of ratings) { %>
-            <option value="<%= rating.code %>"<% if (forms.contentRating === rating.code) { %> selected="selected"<% } %>><%- rating.name.ja %></option>
+            <option value="<%= rating.code %>" <% if (forms.contentRating===rating.code) { %> selected="selected"
+                <% } %>>
+                <%- rating.name.ja %>
+            </option>
             <% } %>
         </select>
         <p class="error message text-danger">
-        <% if (errors && errors.contentRating) { %>
-        <%- errors.contentRating.msg %>
-        <% } %>
+            <% if (errors && errors.contentRating) { %>
+            <%- errors.contentRating.msg %>
+            <% } %>
         </p>
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-sm-3 control-label label-title" for="datePublished">
+        公開日時
+    </label>
+    <div class="col-sm-9">
+        <input type="text" class="form-control datetimepicker" name="datePublished" id="datePublished" value="<%= forms.datePublished %>">
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-sm-3 control-label label-title" for="offers[availabilityEnds]">
+        興行終了予定日時
+    </label>
+    <div class="col-sm-9">
+        <input type="text" class="form-control datetimepicker" name="offers[availabilityEnds]" id="offers[availabilityEnds]"
+            value="<%= (forms.offers !== undefined) ? forms.offers.availabilityEnds : '' %>">
     </div>
 </div>
