# CHEVRE-69 ### Added - 券種に有効ムビチケ券種区分属性を追加。 - 勘定科目インターフェースを追加。

--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -114,9 +114,9 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label" for="offers[eligibleQuantity][value]">注文上限数</label>
+                            <label class="col-sm-3 control-label" for="offers[eligibleQuantity][maxValue]">注文上限数</label>
                             <div class="col-sm-9 form-inline">
-                                <input class="form-control" type="number" name="offers[eligibleQuantity][value]"
+                                <input class="form-control" type="number" name="offers[eligibleQuantity][maxValue]"
                                     placeholder="1" maxlength=10>
                             </div>
                         </div>
