--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -35,6 +35,12 @@
             <li class="<%= (displayId === 'Aa-13') ? 'active': ''; %>"><a href="/priceSpecifications">
                     <i class="glyphicon glyphicon-list"></i> 価格仕様</a>
             </li>
+            <li class="<%= (displayId === 'Aa-14') ? 'active': ''; %>"><a href="/accountTitles/add">
+                    <i class="glyphicon glyphicon-plus"></i> 勘定科目登録</a>
+            </li>
+            <li class="<%= (displayId === 'Aa-15') ? 'active': ''; %>"><a href="/accountTitles">
+                    <i class="glyphicon glyphicon-list"></i> 勘定科目検索</a>
+            </li>
         </ul>
     </div>
     <div class="panel panel-default">
