--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -111,6 +111,19 @@
                                 <select class="form-control" name="ticketTypeGroup"></select>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-12" for="eventStatus">イベントステータス</label>
+                            <div class="col-sm-12">
+                                <select class="form-control" name="eventStatus">
+                                    <option value="">選択してください</option>
+                                    <% Object.keys(EventStatusType).forEach((key) => { %>
+                                    <option value="<%= EventStatusType[key] %>">
+                                        <%= EventStatusType[key] %>
+                                    </option>
+                                    <% }) %>
+                                </select>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
