# CHEVRE-71 ### Changed - 予約へのカスタム属性連携強化。

--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -74,8 +74,13 @@ Aa-11
                         $reservedTicket.ticketedSeat.seatSection$
                         <br> $reservedTicket.ticketedSeat.seatNumber$
                     </td>
-                    <td name="underName.typeOf__underName.name">
-                        <span class="badge">$underName.typeOf$</span><br> $underName.name$
+                    <td name="underName.typeOf__underName.name__underName.givenName__underName.familyName__underName.email__underName.telephone">
+                        <span class="badge">$underName.typeOf$</span>
+                        <br>$underName.name$
+                        <br>$underName.givenName$
+                        <br>$underName.familyName$
+                        <br>$underName.email$
+                        <br>$underName.telephone$
                     </td>
                 </tr>
             </tbody>
